button safari fix

--- a/src/scss/_new_contact.scss
+++ b/src/scss/_new_contact.scss
@@ -28,8 +28,9 @@ input {
 
   border: solid 1px #976f6f;
   border-bottom: none;
-
+  -webkit-appearance: none;
   transition: all 0.3s ease-in-out;
+
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -123,16 +124,13 @@ textarea:hover {
 .overlay {
   width: 100%;
   height: 100%;
-
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 2fr 2fr 1fr;
-
   background: rgba(77, 77, 77, 0.9);
   color: #fff;
   opacity: 0;
   transition: all 0.5s;
-
   font-family: $headings-font;
 }
 
