--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,7 +21,7 @@ body {
     top: 85%;
 
     h1 {
-      font-size: 4.5rem;
+      font-size: 4.3rem;
       font-family: $main-font;
       text-align: center;
       text-shadow: 2px 2px #000;
@@ -91,6 +91,16 @@ body {
       text-shadow: 2px 2px #000;
       margin: 0;
       padding: 5rem 2rem;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .menu-wrapper {
+    .bottom-bar {
+      h1 {
+        font-size: 3rem;
+      }
     }
   }
 }
